Changelog and remarks

## 6 July 2021

Test for github

## 19 May 2021

Added main_weekly.py to the repo


## 21 March 2013

Create scenarios in pyhydroScenarios

Swaps:

swapAll:
 alles op True

swapVeg:
 ** Op true:
 leafAreaIndex=generalfunctions.swapValuesOfTwoRegions(areas,leafAreaIndex,True)
 albedo=generalfunctions.swapValuesOfTwoRegions(areas,albedo,True)
 maxStomatalConductance=generalfunctions.swapValuesOfTwoRegions(areas,maxStomatalConductance,True)
 vegetationHeight=generalfunctions.swapValuesOfTwoRegions(areas,vegetationHeight,True)

 ** Op false
 regolithThicknessHomogeneous=generalfunctions.swapValuesOfTwoRegions(areas,regolithThicknessHomogeneous,False)
 initialSoilMoistureFractionFromDisk=generalfunctions.swapValuesOfTwoRegions(areas,initialSoilMoistureFractionFromDisk,False)
 soilPorosityFraction=generalfunctions.swapValuesOfTwoRegions(areas,soilPorosityFraction,False)
 limitingPointFraction=generalfunctions.swapValuesOfTwoRegions(areas,limitingPointFraction,False)
 mergeWiltingPointFractionFS=generalfunctions.swapValuesOfTwoRegions(areas,mergeWiltingPointFractionFS,False)
 fieldCapacityFraction=generalfunctions.swapValuesOfTwoRegions(areas,fieldCapacityFraction,False)



## 18 Februari 2013

Copied two new input maps from Noemi's directory

We asssume that incoming radiation is everywhere the same, except for shaded areas, there it is zero. To
allow for this I added shaded to the shading module, and this is used in main.py.

In Penman we import now LAI, as this is needed for the evapotranspiration calculation.

NOTE!!! For calibration we want two different timeseries for the two catchments. For the scenarios
we want the other one (one time series for both)! So this should be changed, then.



## 21 January 2010

Included evapotranspiration in main.py script
Corrected the units of the returned evapotranspiration in the evapotranspiration class (see bottom).
Included shading effect

## 2 April 2010

Included the timeseries files (main.py)